fix: solve sonar issues